# pgs_solver

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py
examples/: README.md  benchmark.py  jax_example.py  poisson_cuda_example.cu
python/cupgs/: __init__.py  jax_interface.py
python/pgs_solver/: __init__.py  jax_interface.py
src/: dlpack_integration.cu  gpu_compat.h  pgs_solver.cu  pgs_solver.cuh  python_bindings.cu
tests/: conftest.py  test_cuda_solver.cu  test_jax_integration.py  test_poisson.py  test_solver.py
