[project]
name = "cupgs"
description = "A CUDA PGS Solver with Multi-GPU, sparse matrices and DLPack support."
authors = [
    { name = "Filippo Luca Ferretti", email = "filippoluca.ferretti@outlook.com" },
]
version = "0.1.0"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]
readme = { file = "README.md", content-type = "text/markdown" }
dependencies = [
    "numpy>=2.2.0",
    "jax>=0.5.0",
    "jaxlib>=0.5.0",
]

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "wheel",
    "setuptools>=80",
    "setuptools_scm[toml]>=9.0",
    "cmake-build-extension>=0.4",
]

[tool.setuptools_scm]
local_scheme = "dirty-tag"

[tool.cibuildwheel]
build-frontend = "build"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.activation]
scripts = [".pixi/activation.sh"]

[tool.pixi.tasks]
# Configure and build tasks
configure = { cmd = [
    "cmake",
    "-DCMAKE_BUILD_TYPE=Release",
    "-DCMAKE_INSTALL_PREFIX=$CMAKE_INSTALL_PREFIX",
    "-DPGS_BUILD_TESTS:BOOL=OFF",
    "-G", "Ninja",
    "-S", ".",
    "-B", ".build",
], description = "Configure CMake build" }

build = { cmd = "cmake --build .build --config Release", depends-on = ["configure"], description = "Build C++/CUDA library and examples" }

install = { cmd = ["cmake", "--install", ".build", "--config", "Release"], depends-on = ["build"], description = "Install built libraries" }

uninstall = { cmd = ["cmake", "--build", ".build", "--target", "uninstall"], description = "Uninstall libraries" }

# Test tasks
test = { cmd = "ctest --test-dir .build --build-config Release --output-on-failure", depends-on = ["build"], description = "Run C++ CUDA tests" }
test-python = { cmd = "pytest tests/ -v", depends-on = ["install"], description = "Run Python tests" }
test-all = { cmd = "pytest tests/ -v", depends-on = ["test"], description = "Run all tests (C++ and Python)" }

# Development tasks
rebuild = { cmd = "rm -rf .build && pixi run build", description = "Clean rebuild everything" }
clean = { cmd = "rm -rf .build python/cupgs.egg-info python/cupgs/__pycache__ python/cupgs/lib", description = "Clean build artifacts" }

# Additional tasks
benchmark = { cmd = "python examples/benchmark.py --all", depends-on = ["install"], description = "Run performance benchmarks" }

[tool.pixi.dependencies]
pytest = "*"
pytest-cov = "*"
cmake = "*"
ninja = "*"
cuda-nvcc = "*"
jax = ">=0.7.2"
jaxlib = { version = ">=0.7.2", build = "*cuda*" }
dlpack = "*"
cuda-cudart-dev = "*"
libcusparse-dev = "*"
python = "*"
pip = "*"
numpy = ">=2.3.4"
pybind11 = "*"
matplotlib = "*"
# Pin GCC to version 14 (CUDA 12.8 doesn't support GCC 15+)
cxx-compiler = "*"
c-compiler = "*"
gxx = "14.*"
gcc = "14.*"

[tool.pixi.system-requirements]
cuda = "12"

# ROCm environment for AMD GPUs
[tool.pixi.feature.rocm.tasks]
configure-rocm = { cmd = [
    "cmake",
    "-DCMAKE_BUILD_TYPE=Release",
    "-DCMAKE_INSTALL_PREFIX=$CMAKE_INSTALL_PREFIX",
    "-DPGS_USE_ROCM=ON",
    "-DCMAKE_CXX_COMPILER=/opt/rocm/bin/hipcc",
    "-DPGS_BUILD_TESTS:BOOL=OFF",
    "-G", "Ninja",
    "-S", ".",
    "-B", ".build",
], description = "Configure CMake build with ROCm/HIP" }

build-rocm = { cmd = "cmake --build .build --config Release", depends-on = ["configure-rocm"], description = "Build with ROCm/HIP backend" }

[tool.pixi.environments]
default = { solve-group = "default" }
rocm = { features = ["rocm"], solve-group = "default" }
